--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.2.0",
+    "axios": "^1.6.0",
     "next": "14.0.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.10.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
